--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -11,5 +11,5 @@ spring.jpa.generate-ddl=true
 spring.jpa.show-sql=false
 
 # jwt
-gamelist.jwt.secret=${TOKEN_SECRET}
-gamelist.jwt.expiration=32400000
+pgdb.jwt.secret=${TOKEN_SECRET}
+pgdb.jwt.expiration=32400000
